--- a/length.html
+++ b/length.html
@@ -10,16 +10,20 @@
 
 <body>
     <nav>
-        <a href="./index.html">Home</a>
-        <a href="./data.html">Data Converter</a>
-        <a href="./length.html">Length Converter</a>
-        <a href="./time.html">Time Converter</a>
-        <a href="./mass.html">Mass Converter</a>
-        <a href="./temperature.html">Temperature Converter</a>
-        <a href="./numbersystem.html">Number System Converter</a>
-        <a href="./discount.html">Discount Calculator</a>
-        <a href="./power.html">Power mod Calculator</a>
+        <div class="menu-toggle" onclick="toggleMenu()">&#9776;</div>
+        <div class="nav-links">
+            <a href="./index.html">Home</a>
+            <a href="./data.html">Data Converter</a>
+            <a href="./length.html">Length Converter</a>
+            <a href="./time.html">Time Converter</a>
+            <a href="./mass.html">Mass Converter</a>
+            <a href="./temperature.html">Temperature Converter</a>
+            <a href="./numbersystem.html">Number System Converter</a>
+            <a href="./discount.html">Discount Calculator</a>
+            <a href="./power.html">Power mod Calculator</a>
+        </div>
     </nav>
+
 
     <div class="container">
         <h1>Length Converter</h1>
@@ -43,7 +47,7 @@
             <option value="fa">Fathom</option>
             <option value="A">Angstrom</option>
         </select>
-<br>
+        <br>
         <input type="text" name="output-value" id="output-value" title="Output" placeholder="Converted Length">
 
         <Select name="output-type" id="output-type" title="Click to select">
@@ -66,7 +70,7 @@
             <option value="A">Angstrom</option>
         </select>
     </div>
-
+    <script src="nav.js"></script>
     <script>
         const inputType = document.getElementById("input-type");
         const outputType = document.getElementById("output-type");
