--- a/power.html
+++ b/power.html
@@ -10,15 +10,18 @@
 
 <body>
     <nav>
-        <a href="./index.html">Home</a>
-        <a href="./data.html">Data Converter</a>
-        <a href="./length.html">Length Converter</a>
-        <a href="./time.html">Time Converter</a>
-        <a href="./mass.html">Mass Converter</a>
-        <a href="./temperature.html">Temperature Converter</a>
-        <a href="./numbersystem.html">Number System Converter</a>
-        <a href="./discount.html">Discount Calculator</a>
-        <a href="./power.html">Power mod Calculator</a>
+        <div class="menu-toggle" onclick="toggleMenu()">&#9776;</div>
+        <div class="nav-links">
+            <a href="./index.html">Home</a>
+            <a href="./data.html">Data Converter</a>
+            <a href="./length.html">Length Converter</a>
+            <a href="./time.html">Time Converter</a>
+            <a href="./mass.html">Mass Converter</a>
+            <a href="./temperature.html">Temperature Converter</a>
+            <a href="./numbersystem.html">Number System Converter</a>
+            <a href="./discount.html">Discount Calculator</a>
+            <a href="./power.html">Power mod Calculator</a>
+        </div>
     </nav>
 
     <div class="container">
@@ -32,6 +35,7 @@
         <p id="result">Result </p>
     </div>
 
+    <script src="nav.js"></script>
     <script>
         const base = document.getElementById("base");
         const exponent = document.getElementById("exponent");
