--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Converter</title>
     <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./footer.css">
 </head>
 
 <body>
@@ -43,7 +44,26 @@
             <h2>Power mod Calculator</h2>
             <a href="./power.html">Go to Power mod Calculator</a>
         </div>
+        <div class="card">
+            <h2>Text Editor</h2>
+            <a href="./text.html">Go to Text editor</a>
+        </div>
     </div>
+
+    <footer>
+        <div class="footer-container">
+            <div class="footer-info">
+                <p>&copy; 2024 Arun Neupane. All rights reserved.</p>
+                <p>Made with ❤️ by Arun Neupane</p>
+            </div>
+            <div class="footer-links">
+                <a href="#about">About</a>
+                <a href="#privacy">Privacy Policy</a>
+                <a href="#contact">Contact</a>
+            </div>
+        </div>
+    </footer>
+
 </body>
 
 </html>
