--- a/power.html
+++ b/power.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Power Mod Calculator</title>
     <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./footer.css">
     <style>
         @media (max-width:768px) {
             .container {
@@ -18,6 +19,19 @@
 <body>
     <nav>
         <div class="menu-toggle" onclick="toggleMenu()">&#9776;</div>
+        <div class="nav-links1">
+            <a href="./index.html">Home</a>
+            <a href="./data.html">Data</a>
+            <a href="./length.html">Length</a>
+            <a href="./time.html">Time</a>
+            <a href="./mass.html">Mass</a>
+            <a href="./temperature.html">Temperature</a>
+            <a href="./numbersystem.html">Number System</a>
+            <a href="./discount.html">Discount</a>
+            <a href="./power.html" class="bb">Power mod</a>
+            <a href="./text.html">Text</a>
+            <a href="./contact.html">Contact</a>
+        </div>
         <div class="nav-links">
             <a href="./index.html">Home</a>
             <a href="./data.html">Data Converter</a>
@@ -28,6 +42,8 @@
             <a href="./numbersystem.html">Number System Converter</a>
             <a href="./discount.html">Discount Calculator</a>
             <a href="./power.html">Power mod Calculator</a>
+            <a href="./text.html">Text Styler</a>
+            <a href="./contact.html">Contact Me</a>
         </div>
     </nav>
 
@@ -47,6 +63,20 @@
         </div>
         <p id="result">Result </p>
     </div>
+
+    <footer>
+        <div class="footer-container">
+            <div class="footer-info">
+                <p>&copy; 2024 Arun Neupane. All rights reserved.</p>
+                <p>Made with ❤️ by Arun Neupane</p>
+            </div>
+            <div class="footer-links">
+                <a href="#about">About</a>
+                <a href="#privacy">Privacy Policy</a>
+                <a href="#contact">Contact</a>
+            </div>
+        </div>
+    </footer>
 
     <script src="nav.js"></script>
     <script>
