feat: some quality changes.

--- a/discount.html
+++ b/discount.html
@@ -42,6 +42,7 @@
 
     <div class="container">
         <h1>Discount Calculator</h1>
+        <p>Enter the original price and discount percentage.<br>It will automatically calculate the result.</p>
         <div>
             <label for="original-price">Original Price</label><br>
             <input type="text" placeholder="Enter original amount" title="Enter original price" id="original-price">
