feat : added all required files : privacy policy , contact , about..

--- a/power.html
+++ b/power.html
@@ -49,7 +49,7 @@
 
     <div class="container">
         <h1>Power Mod Calculator</h1>
-        <p>Enter the terms as x to the power y mod n = res <br>and it will automatically calculate the result.</p>
+        <p>Enter the terms as x to the power y mod n = res and it will automatically calculate the result.</p>
         <div>
             <label for="Enter base">Base (x)</label> <br>
             <input type="text" placeholder="Base" id="base">
@@ -74,12 +74,13 @@
                 <p>Made with ❤️ by Arun Neupane</p>
             </div>
             <div class="footer-links">
-                <a href="#about">About</a>
-                <a href="#privacy">Privacy Policy</a>
-                <a href="#contact">Contact</a>
+                <a href="./about.html">About</a>
+                <a href="./privacy.html">Privacy Policy</a>
+                <a href="./contact.html">Contact</a>
             </div>
         </div>
     </footer>
+
 
     <script src="nav.js"></script>
 
