--- a/discount.html
+++ b/discount.html
@@ -56,6 +56,7 @@
         <br>
         <p id="after-amount">Save amount : 0.00<br> Amount after discount : 0.00</p>
     </div>
+
     <footer>
         <div class="footer-container">
             <div class="footer-info">
@@ -63,13 +64,12 @@
                 <p>Made with ❤️ by Arun Neupane</p>
             </div>
             <div class="footer-links">
-                <a href="#about">About</a>
-                <a href="#privacy">Privacy Policy</a>
-                <a href="#contact">Contact</a>
+                <a href="./about.html">About</a>
+                <a href="./privacy.html">Privacy Policy</a>
+                <a href="./contact.html">Contact</a>
             </div>
         </div>
     </footer>
-
 
     <script src="nav.js"></script>
     <script>
