--- a/length.html
+++ b/length.html
@@ -94,12 +94,13 @@
                 <p>Made with ❤️ by Arun Neupane</p>
             </div>
             <div class="footer-links">
-                <a href="#about">About</a>
-                <a href="#privacy">Privacy Policy</a>
-                <a href="#contact">Contact</a>
+                <a href="./about.html">About</a>
+                <a href="./privacy.html">Privacy Policy</a>
+                <a href="./contact.html">Contact</a>
             </div>
         </div>
     </footer>
+
 
     <script src="nav.js"></script>
     <script>
