--- a/about.html
+++ b/about.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About | Unit Converter</title>
     <link rel="stylesheet" href="./styles.css">
-    <link rel="stylesheet" href="./footer.css">
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -29,14 +28,14 @@
             flex: 1;
         }
 
-        h1 {
+        .container h1 {
             text-align: center;
             font-size: 2.5rem;
             margin-bottom: 1rem;
             color: #0044cc;
         }
 
-        p {
+       .container p {
             font-size: 1.1rem;
             line-height: 1.6;
             margin-bottom: 1.5rem;
@@ -53,19 +52,8 @@
         .signature span {
             font-weight: bold;
         }
-
-        footer {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 1rem 0;
-            width: 100%;
-        }
-
-        footer p {
-            margin: 0;
-        }
     </style>
+    <link rel="stylesheet" href="./footer.css">
 </head>
 
 <body>
