--- a/privacy.html
+++ b/privacy.html
@@ -28,27 +28,27 @@
             flex: 1;
         }
 
-        h1 {
+        .container h1 {
             text-align: center;
             font-size: 2.5rem;
             margin-bottom: 1rem;
             color: #0044cc;
         }
 
-        p {
+        .container p {
             font-size: 1.1rem;
             line-height: 1.6;
             margin-bottom: 1.5rem;
             text-align: justify;
         }
 
-        h2 {
+        .container h2 {
             color: #333;
             font-size: 1.5rem;
             margin-bottom: 1rem;
         }
 
-        ul {
+        .container ul {
             margin-left: 1.5rem;
             margin-bottom: 1.5rem;
             line-height: 1.6;
