sudhir lai mardinxu , debugged hexa decimal bug

--- a/numbersystem.html
+++ b/numbersystem.html
@@ -111,7 +111,7 @@
                 num = result;
                 input = false;
             }
-            num = parseFloat(num);
+            // num = parseFloat(num);
             switch (inputType) {
                 case "2":
                     num = parseInt(num, 2);
